#443 Changed new Long to Long.valueOf.